@@ -1,3 +1,9 @@
+2001-12-27 (Thomas Huth):
+  * Finished the first working version of the GUI. Not yet perfect,
+    but many things can now be configured there.
+  * Mapped the GUI to the F12 key, quitting the program is now
+    ALTGR-Q
+
 2001-12-25 (Thomas Huth):
   * Cleaned up: Fixed many "FIXME"s, rewrote the splitpath and makepath
     functions, and moved the scandir and alphasort functions to file.c.
